# Home-Buyer-Intelligence-Claude

./: .env.example  .eslintrc.cjs  .gitignore  2026-02-18-211812-implement-the-following-plan.txt  AGENTS.md  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/backend/: package.json  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 001_initial_schema.py
apps/backend/src/: config.py  main.py
apps/backend/src/api/: dependencies.py
apps/backend/src/api/middleware/: audit.py  errors.py
apps/backend/src/api/v1/: analysis.py  documents.py  gdpr.py  market.py
apps/backend/src/application/dto/: analysis_dto.py  document_dto.py  market_dto.py
apps/backend/src/application/services/: bidding_strategy.py  document_analysis.py  gdpr_service.py  market_intelligence.py  risk_scoring.py
apps/backend/src/domain/: enums.py
apps/backend/src/domain/interfaces/: ai_gateway.py  document_repository.py  document_storage.py  external_data.py  property_repository.py
apps/backend/src/domain/models/: analysis.py  bidding.py  document.py  property.py  risk.py
apps/backend/src/infrastructure/ai/: claude_gateway.py  gemini_gateway.py
apps/backend/src/infrastructure/database/: engine.py  models.py
apps/backend/src/infrastructure/pdf/: extractor.py  preprocessor.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_api.py
apps/backend/tests/unit/: test_pii_preprocessor.py  test_risk_scoring.py
apps/frontend/: index.html  package.json  project.json  (+1 more)
(+31 files in other folders)
