[project]
name = "home-buyer-intelligence-engine"
version = "0.1.0"
description = "AI-powered Dutch home buyer document analysis"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["apps/backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
