[project]
name = "homebuyer-backend"
version = "0.1.0"
description = "Home Buyer Intelligence Engine - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "google-genai>=1.0.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.25.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
